--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaginatedList<Pinzar_Catalin_Lab2.Models.Book>
+﻿@model PaginatedList<LibraryModel.Models.Book>
 
 @{
     ViewData["Title"] = "Index";
