--- a/Views/Publishers/Edit.cshtml
+++ b/Views/Publishers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pinzar_Catalin_Lab2.Models.Publisher
+﻿@model LibraryModel.Models.Publisher
 
 @{
     ViewData["Title"] = "Edit";
@@ -31,7 +31,7 @@
                             @{
                                 int cnt = 0;
 
-                                List<Pinzar_Catalin_Lab2.Models.LibraryViewModels.PublishedBookData> books = ViewBag.Books;
+                                List<LibraryModel.Models.LibraryViewModels.PublishedBookData> books = ViewBag.Books;
                                 foreach (var book in books)
                                 {
                                     if (cnt++ % 3 == 0)
