--- a/Views/Home/Statistics.cshtml
+++ b/Views/Home/Statistics.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Pinzar_Catalin_Lab2.Models.LibraryViewModels.OrderGroup>
+﻿@model IEnumerable<LibraryModel.Models.LibraryViewModels.OrderGroup>
 @{
     ViewData["Title"] = "Ordered Books Statistics";
 }
