--- a/Views/Publishers/Index.cshtml
+++ b/Views/Publishers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Pinzar_Catalin_Lab2.Models.LibraryViewModels.PublisherIndexData
+﻿@model LibraryModel.Models.LibraryViewModels.PublisherIndexData
 @{
     ViewData["Title"] = "Publishers";
 }
