--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Pinzar_Catalin_Lab2
-@using Pinzar_Catalin_Lab2.Models
+@using LibraryModel.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
